1. Added the Tap Event (The custom renderer Works only with Android until now) 2. Removed GeoCoderPage.xaml

--- a/MapsApplication/MapsApplication.Droid/MapsApplication.Droid.csproj
+++ b/MapsApplication/MapsApplication.Droid/MapsApplication.Droid.csproj
@@ -138,6 +138,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CustomRenderers\CustomMapRenderer.cs" />
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
